--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,13 +77,13 @@ jobs:
         with:
           python-version: "3.13"
           cache: "pip" # caching pip dependencies
-      - name: Update _config.yml ⚙️
-        uses: fjogeleit/yaml-update-action@main
-        with:
-          commitChange: false
-          valueFile: "_config.yml"
-          propertyPath: "giscus.repo"
-          value: ${{ github.repository }}
+      # - name: Update _config.yml ⚙️
+      #   uses: fjogeleit/yaml-update-action@main
+      #   with:
+      #     commitChange: false
+      #     valueFile: "_config.yml"
+      #     propertyPath: "giscus.repo"
+      #     value: ${{ github.repository }}
       - name: Install and Build 🔧
         run: |
           pip3 install --upgrade nbconvert
