--- a/_config.yml
+++ b/_config.yml
@@ -134,8 +134,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Rectified Flow Blogs # blog_name will be displayed in your blog page
-blog_description: Tutorials and Blogs on Flow and Diffusion Models
+blog_name: Rectified Flow # blog_name will be displayed in your blog page
+blog_description: Tutorials on Flow and Diffusion Models
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
