--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Let us Flow Together ༄:፣ 𓏲࿐࿔ 🚀 #blank # the website title (if blank, full name will be used instead)
+title: Let us Flow Together ༄࿐࿔🚀 #blank # the website title (if blank, full name will be used instead)
 first_name: Rectified Flow
 middle_name:
 last_name:
