--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name:
 email: rectifiedflow@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Everything should be made as simple as possible, but not simpler.
+  Rectified flow offers an intuitive yet unified perspective on flow- and diffusion-based generative modeling.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
