--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,8 @@ email: rectifiedflow@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Tutorials for Rectified Flow.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+  Official website of Rectified Flow.
+keywords: Rectified Flow, Flow Matching, Diffusion Models, Text to Image Models, Generative Models, Machine Learning, Deep Learning, Artificial Intelligence
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
